<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="payment_company_label">ZenithPay</string>
    <string name="payment_company_subtitle">Trusted Payment Gateway</string>
    <string name="payment_label">Confirm Payment</string>
    <string name="merchant_label">Merchant: %1$s</string>
    <string name="payment_button_label">Confirm Payment</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="tax_label">Tax (8%):</string>
    <string name="total_label">Total Amount:</string>
    <string name="pin_entry_label">Enter 4-Digit PIN:</string>
</resources>
